@@ -1,10 +1,12 @@
-\name{profile.design}
+\name{profileDesign}
+\alias{profileDesign}
 \alias{profile.design}
 \title{Design matrices for likelihood profile calculations.}
 \description{
-  \code{profile.design} generates a data-frame where each row can be used as the starting point for a profile likelihood calculation.
+  \code{profileDesign} generates a data-frame where each row can be used as the starting point for a profile likelihood calculation.
 }
 \usage{
+profileDesign(\dots, lower, upper, nprof)
 profile.design(\dots, lower, upper, nprof)
 }
 \arguments{
@@ -19,18 +21,19 @@ profile.design(\dots, lower, upper, nprof)
   }
 }
 \value{
-  \code{profile.design} returns a data frame with \code{nprof} points per profile point.
+  \code{profileDesign} returns a data frame with \code{nprof} points per profile point.
   The other parameters in \code{vars} are sampled using \code{sobol}.
+  The second form (\code{profile.design}) is now deprecated.
 }
 \seealso{\code{\link{sobol}}}
 \author{Aaron A. King \email{kingaa at umich dot edu}}
 \examples{
 ## A one-parameter profile design:
-x <- profile.design(p=1:10,lower=c(a=0,b=0),upper=c(a=1,b=5),nprof=20)
+x <- profileDesign(p=1:10,lower=c(a=0,b=0),upper=c(a=1,b=5),nprof=20)
 dim(x)
 plot(x)
 ## A two-parameter profile design:
-x <- profile.design(p=1:10,q=3:5,lower=c(a=0,b=0),upper=c(b=5,a=1),nprof=20)
+x <- profileDesign(p=1:10,q=3:5,lower=c(a=0,b=0),upper=c(b=5,a=1),nprof=20)
 dim(x)
 plot(x)
 }
